--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  margin: 0;
+  padding: 0;
+}
 body,
 td,
 th,
@@ -64,22 +68,22 @@ section {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
-header {
+.home-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 80px 60px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 80px;
 }
 
 nav {
   display: grid;
   grid-template-columns: 1fr;
-  grid-column: 1 / span 2;
+  grid-column: 1;
   width: 100%;
   height: 80px;
   background-color: #252831;
@@ -95,13 +99,13 @@ nav h1 a {
   color: #fff;
   font-size: 1.7em;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
 }
 
 #breadcrumb {
   text-align: center;
-  grid-column: 1 / span 2;
+  grid-column: 1;
   grid-row: 2;
   padding: 10px;
   list-style: none;
@@ -109,7 +113,6 @@ nav h1 a {
   margin: 0;
   width: 100%;
   height: 40px;
-  align-self: center;
   justify-self: center;
 }
 
@@ -146,47 +149,45 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397db;
-  align-items: center;
+  text-align: center;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: normal;
-  line-height: 1;
   margin: 0 20px;
+  padding-top: 5px;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 11pt;
+  font-size: 1.2em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  width: 170px;
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: grid;
+  justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
 }
+
 #restaurants-list li {
+  border-top-left-radius: 30px;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -308,9 +309,18 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
+}
+
+/* Adding Responsiveness... */
+@media only screen and (max-width: 550px) {
+  .main-title {
+    font-size: 0.9em;
+  }
 }
