--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,9 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+.leaflet-top.leaflet-left {
+  top: 300px;
+}
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -165,11 +168,18 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 1.2em;
+  font-size: 1.1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
   width: 170px;
+}
+
+#neighborhoods-select:hover,
+#neighborhoods-select:focus,
+#cuisines-select:hover,
+#cuisines-select:focus {
+  outline: 3px solid #000;
 }
 
 /* ====================== Restaurant Listing ====================== */
